refactored docker compose files

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,35 +2,25 @@ version: '3.8'
 
 services:
   app:
-    restart: always
-    build:
-      context: ../app/
+    extends:
+      file: docker-compose.blast_base.yml
+      service: blast_base
     command: bash entrypoints/docker-entrypoint.app.sh
     ports:
       - "8000:${WEB_APP_PORT}"
-    volumes:
-      - ../app:/app
-      - ../data/cutout_cdn:/cutout_cdn
-      - ../data/ghost_output:/ghost_output
-      - ../data/prospector_output:/prospector_output
-      - ../data/tns_staging:/tns_staging
-      - ../data/transmission:/transmission
-    env_file:
-      - ../env/.env.dev
+    profiles: ["full", "slim"]
   celery:
-    restart: always
-    build:
-      context: ../app/
+    extends:
+      file: docker-compose.blast_base.yml
+      service: blast_base
     command: bash entrypoints/docker-entrypoint.celery.sh
-    volumes:
-      - ../app:/app
-      - ../data/cutout_cdn:/cutout_cdn
-      - ../data/ghost_output:/ghost_output
-      - ../data/prospector_output:/prospector_output
-      - ../data/tns_staging:/tns_staging
-      - ../data/transmission:/transmission
-    env_file:
-      - ../env/.env.dev
+    profiles: ["full"]
+  celery_beat:
+    extends:
+      file: docker-compose.blast_base.yml
+      service: blast_base
+    command: bash entrypoints/docker-entrypoint.celery_beat.sh
+    profiles: ["full"]
   rabbitmq:
     restart: always
     image: rabbitmq:3.10.6-management-alpine
@@ -41,37 +31,32 @@ services:
       - ../data/rabbitmq_data:/data
     env_file:
       - ../env/.env.dev
-  celery_beat:
-    restart: always
-    build:
-      context: ../app/
-    command: bash entrypoints/docker-entrypoint.celery_beat.sh
-    volumes:
-      - ../app:/app
-    env_file:
-      - ../env/.env.dev
+    profiles: ["full"]
   database:
-    image: mysql:5.7
-    platform: linux/x86_64
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    env_file:
-      - ../env/.env.dev
+    extends:
+      file: docker-compose.blast_base.yml
+      service: database_base
     volumes:
       - ../data/database/:/var/lib/mysql/
-    ports:
-      - "3306:${DATABASE_PORT}"
+    profiles: ["full", "slim"]
   nginx:
-    restart: always
-    image: nginx:1.21-alpine
+    extends:
+      file: docker-compose.blast_base.yml
+      service: nginx_base
     volumes:
-      - ../app/static:/static
-      - ../data/cutout_cdn:/cutout_cdn
       - ../nginx/default.conf:/etc/nginx/conf.d/default.conf
-    ports:
-      - "80:${WEB_SERVER_PORT}"
-    env_file:
-      - ../env/.env.dev
+    profiles: ["full"]
+  nginx_slim:
+    extends:
+      file: docker-compose.blast_base.yml
+      service: nginx_base
+    volumes:
+      - ../nginx/default_slim.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      default:
+        aliases:
+          - nginx
+    profiles: ["slim"]
   flower:
     build:
       context: ../flower/
@@ -82,3 +67,27 @@ services:
       - ../app/entrypoints:/data/entrypoints
     env_file:
       - ../env/.env.dev
+    profiles: ["run"]
+  app_test:
+    extends:
+      file: docker-compose.blast_base.yml
+      service: blast_base
+    command: bash entrypoints/docker-entrypoint.app.test.sh
+    ports:
+      - "8000:${WEB_APP_PORT}"
+    networks:
+      default:
+        aliases:
+          - app
+    profiles: ["test"]
+  database_test:
+    extends:
+      file: docker-compose.blast_base.yml
+      service: database_base
+    volumes:
+      - ../data/test_database/:/var/lib/mysql/
+    networks:
+      default:
+        aliases:
+          - database
+    profiles: ["test"]
