fixed typos in the docs

--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -5,7 +5,7 @@ TNS_BOT_NAME=
 
 # MySQL Database
 MYSQL_DATABASE = blast_db
-MYSQL_USER = admin
+MYSQL_USER =
 MYSQL_PASSWORD = password
 MYSQL_ROOT_PASSWORD = password
 
