--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -19,11 +19,11 @@ services:
       - ../app/static:/static
       - ../data/cutout_cdn:/cutout_cdn
     ports:
-      - "80:${WEB_SERVER_PORT}"
+      - 80:${WEB_SERVER_PORT}
   database_base:
     image: mysql:5.7
     platform: linux/x86_64
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
-      - "3306:${DATABASE_PORT}"
+      - 3306:${DATABASE_PORT}
