--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     command: bash entrypoints/docker-entrypoint.app.sh
     ports:
       - 8000:${WEB_APP_PORT}
-    profiles: ["full", "slim"]
+    profiles: ["full_prod", "slim_prod"]
     env_file:
       - ../env/.env.dev
     networks:
@@ -20,7 +20,7 @@ services:
       file: docker-compose.blast_base.yml
       service: blast_base
     command: bash entrypoints/docker-entrypoint.celery.sh
-    profiles: ["full"]
+    profiles: ["full_prod", "full_dev"]
     env_file:
       - ../env/.env.dev
   celery_beat:
@@ -28,7 +28,7 @@ services:
       file: docker-compose.blast_base.yml
       service: blast_base
     command: bash entrypoints/docker-entrypoint.celery_beat.sh
-    profiles: ["full"]
+    profiles: ["full_prod", "full_dev"]
     env_file:
       - ../env/.env.dev
   rabbitmq:
@@ -41,14 +41,14 @@ services:
       - ../data/rabbitmq_data:/data
     env_file:
       - ../env/.env.dev
-    profiles: ["full"]
+    profiles: ["full_prod", "full_dev"]
   database:
     extends:
       file: docker-compose.blast_base.yml
       service: database_base
     volumes:
       - ../data/database/:/var/lib/mysql/
-    profiles: ["full", "slim"]
+    profiles: ["full_prod", "slim_prod", "full_dev", "slim_dev"]
     env_file:
       - ../env/.env.dev
   nginx:
@@ -57,7 +57,7 @@ services:
       service: nginx_base
     volumes:
       - ../nginx/default.conf:/etc/nginx/conf.d/default.conf
-    profiles: ["full"]
+    profiles: ["full_prod"]
   nginx_slim:
     extends:
       file: docker-compose.blast_base.yml
@@ -68,7 +68,7 @@ services:
       default:
         aliases:
           - nginx
-    profiles: ["slim"]
+    profiles: ["slim_prod"]
   flower:
     build:
       context: ../flower/
@@ -79,7 +79,7 @@ services:
       - ../app/entrypoints:/data/entrypoints
     env_file:
       - ../env/.env.dev
-    profiles: ["full"]
+    profiles: ["full_prod", "full_dev"]
   app_test:
     extends:
       file: docker-compose.blast_base.yml
@@ -122,3 +122,18 @@ services:
       - "MYSQL_ROOT_PASSWORD=password"
       - "MYSQL_DATABASE=blast_db"
     profiles: ["test", "ci"]
+  app_dev:
+    extends:
+      file: docker-compose.blast_base.yml
+      service: blast_base
+    command: bash entrypoints/docker-entrypoint.app.dev.sh
+    ports:
+      - 8000:${WEB_APP_PORT}
+    profiles: ["full_dev", "slim_dev"]
+    env_file:
+      - ../env/.env.dev
+    networks:
+      default:
+        aliases:
+          - ${WEB_APP_HOST}
+
