--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -15,5 +15,6 @@ jobs:
         run: |
           touch env/.env.dev
           bash run/blast.run.sh ci
-          cd app/ 
-          ls -a
+      - uses: codecov/codecov-action@v3
+        with:
+          directory: app/
