--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -3,8 +3,12 @@ name: Continuous Integration
 on:
   pull_request:
     branches: [main]
+    paths-ignore:
+      - 'docs/**'
   push:
     branches: [main]
+    paths-ignore:
+      - 'docs/**'
 
 jobs:
   build:
