added local build support for docs

--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   blast_base:
-    restart: always
+    #restart: always
     build:
       context: ../app/
     volumes:
