--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -136,3 +136,14 @@ services:
       default:
         aliases:
           - ${WEB_APP_HOST}
+  docs:
+    extends:
+      file: docker-compose.blast_base.yml
+      service: blast_base
+    command: bash entrypoints/docker-entrypoint.docs.sh
+    volumes:
+      - ../docs:/docs
+    profiles: ["docs"]
+
+
+
