new E(B-V) task & healpy install

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,10 +2,11 @@ FROM python:3.8
 ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update
-RUN apt-get install ffmpeg libsm6 libxext6  -y
+RUN apt-get install ffmpeg libsm6 libxext6 emacs libhealpix-cxx-dev -y
 
 COPY ./requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
+
 RUN mkdir /app
 RUN mkdir /cutout_cdn
 RUN mkdir /ghost_output
