--- a/app/host/fixtures/initial/setup_tasks.yaml
+++ b/app/host/fixtures/initial/setup_tasks.yaml
@@ -25,3 +25,9 @@
 - model: host.Task
   fields:
     name: Transient information
+- model: host.Task
+  fields:
+    name: Transient MWEBV
+- model: host.Task
+  fields:
+    name: Host MWEBV
