fsps now a submodule, will get copied to docker filesystem

--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -13,6 +13,7 @@ services:
       - ../data/tns_staging:/tns_staging
       - ../data/transmission:/transmission
       - ../data/dustmaps:/dustmaps
+      - ../data/fsps:/fsps
   nginx_base:
     restart: always
     image: nginx:1.21-alpine
