--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -32,3 +32,6 @@ MESSAGE_BROKER_HOST = rabbitmq
 WEB_APP_HOST = app
 WEB_SERVER_HOST = nginx
 FLOWER_HOST = flower
+
+#blast image
+BLAST_IMAGE = blast_base
