--- a/env/.env.ci
+++ b/env/.env.ci
@@ -16,3 +16,6 @@ MESSAGE_BROKER_HOST = rabbitmq
 WEB_APP_HOST = app
 WEB_SERVER_HOST = nginx
 FLOWER_HOST = flower
+
+#blast image
+BLAST_IMAGE = blast_base
