added publishing on tags

--- a/.github/workflows/docker_image_publish.yml
+++ b/.github/workflows/docker_image_publish.yml
@@ -8,6 +8,8 @@ on:
     paths:
       - "app/Dockerfile"
       - "app/requirements.txt"
+    tags:
+      - *
   pull_request:
     branches: [ main ]
     paths:
