added full image management workflow

--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -2,7 +2,6 @@ version: '3.8'
 
 services:
   blast_base:
-    #restart: always
     build:
       context: ../app/
     volumes:
@@ -29,8 +28,7 @@ services:
     ports:
       - 3306:${DATABASE_PORT}
   blast_latest:
-    #restart: always
-    image: ghcr.io/astrophpeter/blast:edge
+    image: ghcr.io/astrophpeter/blast:latest
     volumes:
       - ../app:/app
       - ../data/cutout_cdn:/cutout_cdn
