--- a/.github/workflows/docker_image_publish.yml
+++ b/.github/workflows/docker_image_publish.yml
@@ -26,14 +26,13 @@ jobs:
         id: prep
         run: |
           DOCKER_IMAGE=ghcr.io/astrophpeter/blast
-          VERSION=edge
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
+            TAGS="${DOCKER_IMAGE}:${VERSION},${DOCKER_IMAGE}:latest"
+          else 
+            TAGS="${DOCKER_IMAGE}:latest"
           fi
-          TAGS="${DOCKER_IMAGE}:${VERSION}"
-          if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
-            TAGS="$TAGS,${DOCKER_IMAGE}:latest"
-          fi
+     
           echo ::set-output name=tags::${TAGS}
       - name: Set up Docker Buildx
         id: buildx
@@ -47,17 +46,6 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      #- name: Test
-      #  id: docker_test
-      #  uses: docker/build-push-action@v3
-      #  with:
-      #    builder: ${{ steps.buildx.outputs.name }}
-      #    context: ./app
-      #    file: ./app/Dockerfile
-      #    target: test
-      #    cache-from: type=gha
-      #    cache-to: type=gha,mode=max
-
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v3
@@ -65,7 +53,6 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           context: ./app
           file: ./app/Dockerfile
-          #target: prod
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
           cache-from: type=gha
