started to add volumes

--- a/env/.env.ci
+++ b/env/.env.ci
@@ -19,3 +19,12 @@ FLOWER_HOST = flower
 
 #blast image
 BLAST_IMAGE = blast_base
+
+DATABASE_VOLUME = data/database/
+TEST_DATABASE_VOLUME = data/test_database/
+CUTOUT_VOLUME = data/cutout_cdn/
+RABBITMQ_VOLUME = data/rabbitmq_data/
+TNS_VOLUME = data/tns_staging/
+PROSPECTOR_VOLUME = data/prospector_output/
+GHOST_VOLUME = data/ghost_output/
+DUSTMAPS_VOLUME = data/dustmaps/
