--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -33,5 +33,9 @@ WEB_APP_HOST = app
 WEB_SERVER_HOST = nginx
 FLOWER_HOST = flower
 
+SPS_HOME = /fsps
+
 #blast image
 BLAST_IMAGE = blast_latest
+
+FSPS_VOLUME = data/fsps/
