--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,5 +10,8 @@ RUN pip install -r /requirements.txt
 RUN mkdir /app
 RUN mkdir /cutout_cdn
 RUN mkdir /ghost_output
+RUN mkdir /fsps
+
+RUN
 COPY . /app
 WORKDIR /app
