--- a/app/host/fixtures/initial/setup_acknowledgements.yaml
+++ b/app/host/fixtures/initial/setup_acknowledgements.yaml
@@ -77,3 +77,10 @@
     description: Used in the inference of host galaxy parameters
     website_url: https://svo.cab.inta-csic.es/main/index.php
     paper_url: https://ui.adsabs.harvard.edu/abs/2020sea..confE.182R/abstract
+- model: host.Acknowledgement
+  fields:
+    name: Python FSPS
+    description: Used to generate spectra and magnitude for arbitrary stellar populations
+    website_url: https://www.astropy.org
+
+
