--- a/app/host/fixtures/initial/setup_acknowledgements.yaml
+++ b/app/host/fixtures/initial/setup_acknowledgements.yaml
@@ -81,6 +81,8 @@
   fields:
     name: Python FSPS
     description: Used to generate spectra and magnitude for arbitrary stellar populations
-    website_url: https://www.astropy.org
+    repository_url: https://github.com/dfm/python-fsps/tree/v0.4.1rc1
+    website_url: https://dfm.io/python-fsps/current/
+    doi: 10.5281/zenodo.4737461
 
 
