creating and plotting prospector results

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,5 @@
-fsps
+git+https://github.com/dfm/python-fsps.git
+numpy==1.23.2
 dynesty
 alabaster==0.7.12
 amqp==5.0.9
@@ -46,7 +47,6 @@ kombu==5.2.3
 MarkupSafe==2.0.1
 matplotlib==3.5.0
 mimeparse==0.1.3
-numpy==1.23.1
 packaging==21.3
 pandas==1.3.4
 photutils==1.2.0
