--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,7 @@ data/cutout_cdn/2010ai/*
 !data/cutout_cdn/2010h/*
 !data/cutout_cdn/2010ag/*
 !data/cutout_cdn/2010ai/*
+!data/sed_output/2010h/*
 
 static/
 
