--- a/app/host/fixtures/example/2010h.yaml
+++ b/app/host/fixtures/example/2010h.yaml
@@ -82,7 +82,7 @@
   fields:
     transient: [2010h]
     task: [Local host SED inference]
-    status: [processed]
+    status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 100.0
 - model: host.TaskRegister
@@ -528,3 +528,43 @@
       flux_error: 2666271.5
       magnitude: 0.0
       magnitude_error: 0.0
+- model: host.ProspectorResult
+  fields:
+      host: [IC 494]
+      aperture: [2010h_PanSTARRS_g_global]
+      posterior: /sed_output/2010h/IC 494_global.h5
+      log_mass_16: 11.11623006468808
+      log_mass_50: 11.119444597406906
+      log_mass_84: 11.122195767038848
+      log_sfr_16: -9.885957158543373
+      log_sfr_50: -9.452641904357886
+      log_sfr_84: -7.854718482318168
+      log_ssfr_16: -21.005705687227554
+      log_ssfr_50: -20.56957875030653
+      log_ssfr_84: -18.975108348918212
+      log_age_16: 3.3558538428424978
+      log_age_50: 3.3848699023305824
+      log_age_84: 3.4566111510622477
+      log_tau_16: 0.10096442863244388
+      log_tau_50: 0.1046197140354783
+      log_tau_84: 0.1261118048050916
+- model: host.ProspectorResult
+  fields:
+      host: [IC 494]
+      aperture: [2010h_local]
+      posterior: /sed_output/2010h/IC 494_local.h5
+      log_mass_16: 8.849994109986605
+      log_mass_50: 8.894097969541852
+      log_mass_84: 8.96004598530449
+      log_sfr_16: -8.953639946834054
+      log_sfr_50: -5.493737812812891
+      log_sfr_84: -2.949760445521605
+      log_ssfr_16: -17.851239889289612
+      log_ssfr_50: -14.381920176924307
+      log_ssfr_84: -11.890886258100974
+      log_age_16: 2.7893040809653034
+      log_age_50: 3.9156213648412592
+      log_age_84: 6.416906088053504
+      log_tau_16: 0.1255658907438466
+      log_tau_50: 0.22027085216263398
+      log_tau_84: 0.5961470357024149
