requirements and dockerfile adj

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.8
 ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update
-RUN apt-get install ffmpeg libsm6 libxext6 libhealpix-cxx-dev gfortran -y
+RUN apt-get install ffmpeg libsm6 libxext6 libhealpix-cxx-dev emacs -y
 
 COPY ./requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
