--- a/env/.env.ci
+++ b/env/.env.ci
@@ -25,3 +25,7 @@ BLAST_IMAGE = blast_base
 #REST API
 API_AUTHENTICATION = AllowAny
 ALLOW_API_POST = YES
+
+#Batch mode
+BATCH_CSV=../batch/example_input.csv
+OUTPUT_CSV=../batch/results.csv
