--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -43,3 +43,7 @@ FSPS_VOLUME = data/fsps/
 #REST API
 API_AUTHENTICATION = AllowAny
 ALLOW_API_POST = YES
+
+#Batch mode
+BATCH_CSV=../batch/example_input.csv
+OUTPUT_CSV=../batch/results.csv
