added option to not re-download cutouts

--- a/env/.env.ci
+++ b/env/.env.ci
@@ -32,3 +32,6 @@ ALLOW_API_POST = YES
 #Batch mode
 BATCH_CSV=../batch/example_input.csv
 OUTPUT_CSV=../batch/results.csv
+
+#Cutout settings, false if cutouts shouldn't be re download, True if they should
+CUTOUT_OVERWRITE = False
