--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,7 +3,7 @@ dynesty==1.2.3
 alabaster==0.7.12
 amqp==5.0.9
 asgiref==3.4.1
-astro-ghost==0.1.25
+astro-ghost==0.1.46
 astro-prospector==1.0.0
 astropy==5.0.4
 astroquery==0.4.4
@@ -104,3 +104,5 @@ astro-sedpy
 django-revproxy
 djangorestframework
 fsps==0.4.1
+opencv_python==4.6.0.66
+extinction==0.4.6
