--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,5 @@ batch/*
 !batch/results.csv
 !batch/run_batch.py
 !batch/docker-entrypoint.batch.sh
+
+validation_data/jones+18_panstarrs_g_cutouts/
