--- a/app/api/fixtures/test/test_aperture_upload.yaml
+++ b/app/api/fixtures/test/test_aperture_upload.yaml
@@ -12,3 +12,29 @@
     ra_deg: 120.0273250
     dec_deg: 2.1707639
     host: [PSO J080624.103+010209.859]
+- model: host.Survey
+  fields:
+    name: 2MASS
+- model: host.Filter
+  fields:
+    name: 2MASS_J
+    survey: [2MASS]
+    sedpy_id: twomass_j
+    hips_id: CDS/P/2MASS/J
+    pixel_size_arcsec: 1.0
+    vosa_id: 2MASS/2MASS.J
+    image_download_method: hips
+    wavelength_eff_angstrom: 12350.00
+    wavelength_min_angstrom: 10806.47
+    wavelength_max_angstrom: 14067.97
+    vega_zero_point_jansky: 1594.00
+    magnitude_zero_point: 20.9044
+    image_pixel_units: 'counts/sec'
+    kcorrect_name: 'twomass_J'
+- model: host.Cutout
+  fields:
+      name: 2022testone_2MASS_J
+      filter: [2MASS_J]
+      transient: [2022testone]
+      fits: /../cutout_cdn/2022testone/2MASS/2MASS_J.fits
+
