new debug features

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,6 +7,8 @@ RUN apt-get install ffmpeg libsm6 libxext6 gfortran libhealpix-cxx-dev -y
 COPY ./requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
 
+COPY ./debug/debug_ipython.py /root/.ipython/profile_default/startup/
+
 RUN mkdir /app
 RUN mkdir /cutout_cdn
 RUN mkdir /ghost_output
