--- a/app/host/fixtures/initial/setup_acknowledgements.yaml
+++ b/app/host/fixtures/initial/setup_acknowledgements.yaml
@@ -29,7 +29,7 @@
     description: Used for the host aperture photometry
     repository_url: https://github.com/astropy/photutils
     website_url: https://photutils.readthedocs.io/en/stable/
-    paper_url:
+    paper_url:  https://ui.adsabs.harvard.edu/abs/2022zndo....596036B/abstract
     doi: 10.5281/zenodo.6385735
     acknowledgement_text: This research made use of Photutils, an Astropy package for detection and photometry of astronomical sources (Bradley et al. 2020).
 - model: host.Acknowledgement
@@ -70,17 +70,22 @@
     name: sedpy
     description: Used in the inference of host galaxy parameters
     repository_url: https://github.com/bd-j/sedpy
+    website_url: https://ui.adsabs.harvard.edu/abs/2019ascl.soft05026J/abstract
+    paper_url: https://pypi.org/project/sedpy/
     doi: 10.5281/zenodo.4582723
 - model: host.Acknowledgement
   fields:
     name: SVO Filter Profile Service
     description: Used in the inference of host galaxy parameters
+    repository_url: https://github.com/hover2pi/svo_filters
     website_url: https://svo.cab.inta-csic.es/main/index.php
     paper_url: https://ui.adsabs.harvard.edu/abs/2020sea..confE.182R/abstract
+    doi: https://zenodo.org/record/4737749
 - model: host.Acknowledgement
   fields:
     name: Python FSPS
     description: Used to generate spectra and magnitude for arbitrary stellar populations
     repository_url: https://github.com/dfm/python-fsps/tree/v0.4.1rc1
     website_url: https://dfm.io/python-fsps/current/
+    paper_url: https://ui.adsabs.harvard.edu/abs/2014zndo.....12157F/abstract
     doi: 10.5281/zenodo.4737461
